--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "mongoose",
+  "name": "mongodb-exploration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.0-beta4"
+    "express": "^4.16.3",
+    "express-async-errors": "^2.1.2",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.4"
   }
 }
