--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/server.js"
+    "test": "jest server/**/*.test.js",
+    "test-watch": "npm test -- --watch",
+    "dev": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,8 @@
     "mongoose": "^5.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.4"
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.4",
+    "supertest": "^3.1.0"
   }
 }
