--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest server/**/*.test.js",
     "test-watch": "npm test -- --watch",
-    "dev": "nodemon server/index.js"
+    "dev": "nodemon server/index.js -i *.test.js"
   },
   "keywords": [],
   "author": "",
