--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-async-errors": "^2.1.2",
+    "lodash": "^4.17.10",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.1"
   },
