--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-async-errors": "^2.1.2",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.0-beta4",
-    "mongoose": "^5.1.1"
+    "mongoose": "^5.1.1",
+    "validator": "^10.2.0"
   },
   "devDependencies": {
     "jest": "^22.4.3",
