--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "test": "jest server/tests/.*\\.test\\.js --watchPathIgnorePatterns playground/.*",
+    "test": "jest server/tests/.*\\.test\\.js --watchPathIgnorePatterns playground/.* --forceExit",
     "test-watch": "npm test -- --watch",
     "dev": "nodemon server/index.js -i playground/** -i *.test.js"
   },
